--- a/src/workspace/clinical-lowlight-theme/Workspace.module.scss
+++ b/src/workspace/clinical-lowlight-theme/Workspace.module.scss
@@ -33,5 +33,7 @@
     --terra-application-workspace-workspace-border-radius: 3px;
     --terra-application-workspace-workspace-is-overlay-border: none;
     --terra-application-workspace-workspace-is-overlay-border-radius: 0;
+    --terra-application-workspace-button-header-is-overlay-border-top-left-radius: 0;
+    --terra-application-workspace-button-header-is-overlay-border-top-right-radius: 0;
   }
 }
