--- a/src/workspace/orion-fusion-theme/Workspace.module.scss
+++ b/src/workspace/orion-fusion-theme/Workspace.module.scss
@@ -33,5 +33,7 @@
     --terra-application-workspace-workspace-border-radius: 3px;
     --terra-application-workspace-workspace-is-overlay-border: 1px solid #868a8c;
     --terra-application-workspace-workspace-is-overlay-border-radius: 3px;
+    --terra-application-workspace-button-header-is-overlay-border-top-left-radius: 3px;
+    --terra-application-workspace-button-header-is-overlay-border-top-right-radius: 3px;
   }
 }
